--- a/debian/nvidia-glx-ia32.links.in
+++ b/debian/nvidia-glx-ia32.links.in
@@ -1,5 +1,6 @@
-emul/ia32-linux/usr/lib/libGL.so.#VERSION# emul/ia32-linux/usr/lib/libGL.so.1
-emul/ia32-linux/usr/lib/libGL.so.#VERSION# emul/ia32-linux/usr/lib/libGL.so
-emul/ia32-linux/usr/lib/libGLcore.so.#VERSION# emul/ia32-linux/usr/lib/libGLcore.so
-emul/ia32-linux/usr/lib/libnvidia-tls.so.#VERSION# emul/ia32-linux/usr/lib/libnvidia-tls.so.1
-emul/ia32-linux/usr/lib/libcuda.so.#VERSION#  emul/ia32-linux/usr/lib/libcuda.so
+usr/lib32/libGL.so.#VERSION# usr/lib32/libGL.so.1
+usr/lib32/libGL.so.#VERSION# usr/lib32/libGL.so
+usr/lib32/libGLcore.so.#VERSION# usr/lib32/libGLcore.so
+usr/lib32/libnvidia-tls.so.#VERSION# usr/lib32/libnvidia-tls.so.1
+usr/lib32/tls/libnvidia-tls.so.#VERSION# usr/lib32/tls/libnvidia-tls.so.1
+usr/lib32/libcuda.so.#VERSION#  usr/lib32/libcuda.so
