apply beckmann patches
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@563 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -32,6 +32,12 @@ binary-modules: configure
 
 	dh_prep
 
+ifneq (,$(wildcard makefile))
+	@echo "ERROR: unclean build directory from older version found, please clean first:"
+	@echo "    module-assistant clean nvidia"
+	@exit 1
+endif
+
 	# Build the modules
 	$(MAKE) -C . LINUXDIR=$(KSRC) KVERREL=$(KVERS)
 
