--- a/debian/nvidia-glx-ia32.links.in
+++ b/debian/nvidia-glx-ia32.links.in
@@ -1,6 +1,5 @@
 usr/lib32/libGL.so.#VERSION# usr/lib32/libGL.so.1
-usr/lib32/libGL.so.#VERSION# usr/lib32/libGL.so
-usr/lib32/libGLcore.so.#VERSION# usr/lib32/libGLcore.so
+usr/lib32/libGL.so.1 usr/lib32/libGL.so
+usr/lib32/libGLcore.so.#VERSION# usr/lib32/libGLcore.so.1
 usr/lib32/libnvidia-tls.so.#VERSION# usr/lib32/libnvidia-tls.so.1
 usr/lib32/tls/libnvidia-tls.so.#VERSION# usr/lib32/tls/libnvidia-tls.so.1
-usr/lib32/libcuda.so.#VERSION#  usr/lib32/libcuda.so
