--- a/debian/rules
+++ b/debian/rules
@@ -28,13 +28,13 @@ dirname_x86:=$(shell sh debian/upstream_info DIRNAME_X86)
 dirname_x86_64:=$(shell sh debian/upstream_info DIRNAME_X86_64)
 
 AUTOCLEAN=debian/nvidia-kernel-source.README.Debian \
-debian/copyright debian/nvidia-glx.links \
-debian/nvidia-libvdpau1.links debian/nvidia-libvdpau1-ia32.links \
+debian/nvidia-glx.links \
 debian/nvidia-glx.lintian-overrides.amd64 debian/nvidia-glx.lintian-overrides.i386 \
 debian/nvidia-glx.docs debian/nvidia-glx.examples \
-debian/nvidia-libvdpau1.docs \
+debian/nvidia-libvdpau1.links debian/nvidia-libvdpau1.docs \
 debian/nvidia-glx.postrm debian/nvidia-glx.init \
 debian/nvidia-glx-ia32.lintian-overrides debian/nvidia-glx-ia32.links \
+debian/nvidia-libvdpau1-ia32.links \
 debian/nvidia-kernel-source.docs debian/nvidia-glx-dev.preinst \
 debian/libcuda1.install debian/libcuda1-ia32.install debian/libcuda1-dev.install \
 debian/libcuda1.links debian/libcuda1-ia32.links \
@@ -43,7 +43,7 @@ debian/libcuda1-ia32.lintian-overrides \
 debian/libcuda1-ia32.symbols \
 debian/nvidia-libvdpau1.lintian-overrides.amd64 debian/nvidia-libvdpau1.lintian-overrides.i386 \
 debian/nvidia-libvdpau1-ia32.lintian-overrides \
-debian/nvidia-libvdpau1-ia32.symbols \
+debian/nvidia-libvdpau1-ia32.symbols 
 
 AUTOGEN=$(AUTOCLEAN) debian/copyright
 
