--- a/debian/control.in
+++ b/debian/control.in
@@ -108,6 +108,7 @@ Description: NVIDIA vdpau development files
  This package contains the VDPAU development files.
 
 Package: nvidia-kernel-source
+Section: non-free/kernel
 Architecture: i386 amd64
 Depends: debhelper (>> 4.0.0), make, sed (>> 3.0), dpatch (>= 2.0.0), ${misc:Depends}
 Recommends: nvidia-glx (>= #VERSION#), kernel-package (>= 8.082), module-assistant, devscripts
