--- a/debian/control
+++ b/debian/control
@@ -68,7 +68,7 @@ Package: nvidia-libvdpau1-ia32
 Section: non-free/libs
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
-Depends: nvidia-libvdpau1-driver-ia32 (>= 190.42),
+Depends: nvidia-vdpau-driver-ia32 (>= 190.42),
  ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-190.42
 Suggests: nvidia-kernel-source (>= 190.42)
@@ -83,7 +83,7 @@ Description: NVIDIA vdpau 32bit libraries
 Package: nvidia-libvdpau1
 Section: non-free/libs
 Architecture: i386 amd64
-Depends: nvidia-libvdpau1-driver (>= 190.42),
+Depends: nvidia-vdpau-driver (>= 190.42),
  ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-190.42
 Suggests: nvidia-kernel-source (>= 190.42)
@@ -95,30 +95,32 @@ Description: NVIDIA vdpau libraries
  graphics cards. See /usr/share/doc/nvidia-libvdpau/README.txt.gz for 
  more information.
 
-Package: nvidia-libvdpau1-driver
+Package: nvidia-vdpau-driver
 Section: non-free/libs
 Architecture: i386 amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-190.42
 Suggests: nvidia-kernel-source (>= 190.42)
-Replaces: nvidia-glx (< 180.51), nvidia-libvdpau
+Replaces: nvidia-glx (< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver
 Conflicts: nvidia-glx (< 180.51), nvidia-libvdpau,
- nvidia-libvdpau1 (<< 190.42-3)
+ nvidia-libvdpau1 (<< 190.42-3), nvidia-libvdpau1-driver
+Provides: vdpau-driver
 Description: NVIDIA vdpau driver
  These libraries provide the Video Decode and Presentation API for Unix.
  They provide accelerated video playback (incl. H.264) for the supported
  graphics cards. See /usr/share/doc/nvidia-libvdpau/README.txt.gz for
  more information.
 
-Package: nvidia-libvdpau1-driver-ia32
+Package: nvidia-vdpau-driver-ia32
 Section: non-free/libs
 Architecture: amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-190.42
 Suggests: nvidia-kernel-source (>= 190.42)
-Replaces: nvidia-glx (< 180.51), nvidia-libvdpau
+Replaces: nvidia-glx (< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver-ia32
 Conflicts: nvidia-glx (< 180.51), nvidia-libvdpau,
- nvidia-libvdpau1 (<< 190.42-3)
+ nvidia-libvdpau1 (<< 190.42-3), nvidia-libvdpau1-driver-ia32
+Provides: vdpau-driver
 Description: NVIDIA vdpau 32-bit driver
  These libraries provide the Video Decode and Presentation API for Unix.
  They provide accelerated video playback (incl. H.264) for the supported
