--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,8 @@ Homepage: http://www.nvidia.com
 Package: nvidia-glx-ia32
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
-Depends: nvidia-kernel-190.42, ${shlibs:Depends}, ${misc:Depends}
-Suggests: nvidia-settings, nvidia-kernel-source (>= 190.42)
+Depends: nvidia-kernel-190.53, ${shlibs:Depends}, ${misc:Depends}
+Suggests: nvidia-settings, nvidia-kernel-source (>= 190.53)
 Conflicts: nvidia-glx-src
 Replaces: nvidia-glx-src
 Description: NVIDIA binary driver 32bit libs
@@ -32,8 +32,8 @@ Description: NVIDIA binary driver 32bit libs
 
 Package: nvidia-glx
 Architecture: i386 amd64
-Depends: nvidia-kernel-190.42, x11-common (>= 1:7.0.0), ${shlibs:Depends}, ${misc:Depends}
-Suggests: nvidia-settings, nvidia-kernel-source (>= 190.42)
+Depends: nvidia-kernel-190.53, x11-common (>= 1:7.0.0), ${shlibs:Depends}, ${misc:Depends}
+Suggests: nvidia-settings, nvidia-kernel-source (>= 190.53)
 Conflicts: nvidia-glx-src, nvidia-glx-dev (<< 1.0.8774-5)
 Replaces: nvidia-glx-src
 Description: NVIDIA binary Xorg driver
@@ -53,9 +53,9 @@ Description: NVIDIA binary Xorg driver
 
 Package: nvidia-glx-dev
 Architecture: i386 amd64
-Depends: nvidia-glx (>= 190.42), ${misc:Depends}
+Depends: nvidia-glx (>= 190.53), ${misc:Depends}
 Provides: libgl-dev
-Conflicts: nvidia-glx (>= 190.43), libgl-dev, mesa-common-dev
+Conflicts: nvidia-glx (>= 190.54), libgl-dev, mesa-common-dev
 Replaces: libgl-dev
 Description: NVIDIA binary Xorg driver development files
  This package contains the NVIDIA binary Xorg driver
@@ -68,10 +68,10 @@ Package: nvidia-libvdpau1-ia32
 Section: non-free/libs
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
-Depends: nvidia-vdpau-driver-ia32 (>= 190.42),
+Depends: nvidia-libvdpau1-driver-ia32 (>= 190.53),
  ${shlibs:Depends}, ${misc:Depends}
-Recommends: nvidia-kernel-190.42
-Suggests: nvidia-kernel-source (>= 190.42)
+Recommends: nvidia-kernel-190.53
+Suggests: nvidia-kernel-source (>= 190.53)
 Replaces: nvidia-glx-ia32 (< 180.51), nvidia-libvdpau-ia32
 Conflicts: nvidia-glx-ia32 (< 180.51), nvidia-libvdpau-ia32
 Description: NVIDIA vdpau 32bit libraries
@@ -83,10 +83,10 @@ Description: NVIDIA vdpau 32bit libraries
 Package: nvidia-libvdpau1
 Section: non-free/libs
 Architecture: i386 amd64
-Depends: nvidia-vdpau-driver (>= 190.42),
+Depends: nvidia-libvdpau1-driver (>= 190.53),
  ${shlibs:Depends}, ${misc:Depends}
-Recommends: nvidia-kernel-190.42
-Suggests: nvidia-kernel-source (>= 190.42)
+Recommends: nvidia-kernel-190.53
+Suggests: nvidia-kernel-source (>= 190.53)
 Replaces: nvidia-glx (< 180.51), nvidia-libvdpau
 Conflicts: nvidia-glx (< 180.51), nvidia-libvdpau
 Description: NVIDIA vdpau libraries
@@ -99,8 +99,8 @@ Package: nvidia-vdpau-driver
 Section: non-free/libs
 Architecture: i386 amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: nvidia-kernel-190.42
-Suggests: nvidia-kernel-source (>= 190.42)
+Recommends: nvidia-kernel-190.53
+Suggests: nvidia-kernel-source (>= 190.53)
 Replaces: nvidia-glx (< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver
 Conflicts: nvidia-glx (< 180.51), nvidia-libvdpau,
  nvidia-libvdpau1 (<< 190.42-3), nvidia-libvdpau1-driver
@@ -115,8 +115,8 @@ Package: nvidia-vdpau-driver-ia32
 Section: non-free/libs
 Architecture: amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: nvidia-kernel-190.42
-Suggests: nvidia-kernel-source (>= 190.42)
+Recommends: nvidia-kernel-190.53
+Suggests: nvidia-kernel-source (>= 190.53)
 Replaces: nvidia-glx (< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver-ia32
 Conflicts: nvidia-glx (< 180.51), nvidia-libvdpau,
  nvidia-libvdpau1 (<< 190.42-3), nvidia-libvdpau1-driver-ia32
@@ -130,8 +130,8 @@ Description: NVIDIA vdpau 32-bit driver
 Package: nvidia-libvdpau-dev
 Section: non-free/libdevel
 Architecture: i386 amd64
-Depends: nvidia-libvdpau1 (>= 190.42), ${misc:Depends}
-Conflicts: nvidia-glx-dev (< 180.51), nvidia-libvdpau1 (>= 190.43)
+Depends: nvidia-libvdpau1 (>= 190.53), ${misc:Depends}
+Conflicts: nvidia-glx-dev (< 180.51), nvidia-libvdpau1 (>= 190.54)
 Provides: nvidia-libvdpau1-dev
 Replaces: nvidia-libvdpau, nvidia-glx-dev (< 180.51)
 Description: NVIDIA vdpau development files
@@ -145,7 +145,7 @@ Package: nvidia-kernel-source
 Section: non-free/kernel
 Architecture: i386 amd64
 Depends: debhelper (>> 4.0.0), make, sed (>> 3.0), dpatch (>= 2.0.0), ${misc:Depends}
-Recommends: nvidia-glx (>= 190.42), kernel-package (>= 8.082), module-assistant, devscripts
+Recommends: nvidia-glx (>= 190.53), kernel-package (>= 8.082), module-assistant, devscripts
 Conflicts: nvidia-kernel-src
 Replaces: nvidia-kernel-src
 Description: NVIDIA binary kernel module source
@@ -162,8 +162,8 @@ Package: libcuda1
 Section: non-free/libs
 Architecture: i386 amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: nvidia-kernel-190.42
-Suggests: nvidia-kernel-source (>= 190.42)
+Recommends: nvidia-kernel-190.53
+Suggests: nvidia-kernel-source (>= 190.53)
 Replaces: nvidia-glx (<< 185.18.14-2), nvidia-glx-dev (<< 185.18.14-2)
 Description: NVIDIA CUDA runtime library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -184,8 +184,8 @@ Section: non-free/libs
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: nvidia-kernel-190.42
-Suggests: nvidia-kernel-source (>= 190.42)
+Recommends: nvidia-kernel-190.53
+Suggests: nvidia-kernel-source (>= 190.53)
 Replaces: nvidia-glx-ia32 (<< 185.18.14-2)
 Description: NVIDIA CUDA runtime library (32-bit)
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -204,7 +204,7 @@ Description: NVIDIA CUDA runtime library (32-bit)
 Package: libcuda1-dev
 Section: non-free/libdevel
 Architecture: i386 amd64
-Depends: libcuda1 (>= 190.42), ${misc:Depends}
+Depends: libcuda1 (>= 190.53), ${misc:Depends}
 Provides: libcuda-dev
 Replaces: nvidia-glx-dev (<< 185.18.14-2)
 Description: NVIDIA CUDA development files
