Ensure NVIDIA driver packages are in source tree before attempting to build.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@694 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -73,7 +73,7 @@ version-change: version-clean debian/control $(AUTOGEN) clean
 configure: configure-stamp
 
 .PHONY: configure-stamp
-configure-stamp: version-clean debian/control $(AUTOGEN)
+configure-stamp: version-clean debian/control $(AUTOGEN) ${filename_x86} ${filename_x86_64}
 	dh_testdir
 	# extract both so we can fetch the kernel object code for both arches
 	./${filename_x86} --extract-only
