--- a/debian/control
+++ b/debian/control
@@ -72,8 +72,8 @@ Depends: nvidia-vdpau-driver-ia32 (>= 190.53),
  ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-190.53
 Suggests: nvidia-kernel-source (>= 190.53)
-Replaces: nvidia-glx-ia32 (< 180.51), nvidia-libvdpau-ia32
-Conflicts: nvidia-glx-ia32 (< 180.51), nvidia-libvdpau-ia32
+Replaces: nvidia-glx-ia32 (<< 180.51), nvidia-libvdpau-ia32
+Conflicts: nvidia-glx-ia32 (<< 180.51), nvidia-libvdpau-ia32
 Description: NVIDIA vdpau 32bit libraries
  These libraries provide the Video Decode and Presentation API for Unix
  (32 bit). They provide accelerated video playback (incl. H.264) for the 
@@ -87,8 +87,8 @@ Depends: nvidia-vdpau-driver (>= 190.53),
  ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-190.53
 Suggests: nvidia-kernel-source (>= 190.53)
-Replaces: nvidia-glx (< 180.51), nvidia-libvdpau
-Conflicts: nvidia-glx (< 180.51), nvidia-libvdpau
+Replaces: nvidia-glx (<< 180.51), nvidia-libvdpau
+Conflicts: nvidia-glx (<< 180.51), nvidia-libvdpau
 Description: NVIDIA vdpau libraries
  These libraries provide the Video Decode and Presentation API for Unix.
  They provide accelerated video playback (incl. H.264) for the supported 
@@ -101,8 +101,8 @@ Architecture: i386 amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-190.53
 Suggests: nvidia-kernel-source (>= 190.53)
-Replaces: nvidia-glx (< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver
-Conflicts: nvidia-glx (< 180.51), nvidia-libvdpau,
+Replaces: nvidia-glx (<< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver
+Conflicts: nvidia-glx (<< 180.51), nvidia-libvdpau,
  nvidia-libvdpau1 (<< 190.42-3), nvidia-libvdpau1-driver
 Provides: vdpau-driver
 Description: NVIDIA vdpau driver
@@ -117,8 +117,8 @@ Architecture: amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-190.53
 Suggests: nvidia-kernel-source (>= 190.53)
-Replaces: nvidia-glx (< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver-ia32
-Conflicts: nvidia-glx (< 180.51), nvidia-libvdpau,
+Replaces: nvidia-glx (<< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver-ia32
+Conflicts: nvidia-glx (<< 180.51), nvidia-libvdpau,
  nvidia-libvdpau1 (<< 190.42-3), nvidia-libvdpau1-driver-ia32
 Provides: vdpau-driver
 Description: NVIDIA vdpau 32-bit driver
@@ -131,9 +131,9 @@ Package: nvidia-libvdpau-dev
 Section: non-free/libdevel
 Architecture: i386 amd64
 Depends: nvidia-libvdpau1 (>= 190.53), ${misc:Depends}
-Conflicts: nvidia-glx-dev (< 180.51), nvidia-libvdpau1 (>= 190.54)
+Conflicts: nvidia-glx-dev (<< 180.51), nvidia-libvdpau1 (>= 190.54)
 Provides: nvidia-libvdpau1-dev
-Replaces: nvidia-libvdpau, nvidia-glx-dev (< 180.51)
+Replaces: nvidia-libvdpau, nvidia-glx-dev (<< 180.51)
 Description: NVIDIA vdpau development files
  The NVIDIA Video Decode and Presentation API for Unix (VDPAU) provides a
  complete solution for decoding, post-processing, compositing, and displaying
