--- a/debian/copyright.in
+++ b/debian/copyright.in
@@ -8,6 +8,7 @@ Upstream Author: NVIDIA <linux-bugs@nvidia.com>
 
 
 Copyright:
+Copyright 1993-2009 NVIDIA Corporation.  All rights reserved.
 
 First a note from the README file
 
@@ -110,11 +111,12 @@ the Software, may not otherwise copy the SOFTWARE.  This LICENSE
 of SOFTWARE may not be shared or used concurrently on different
 computers.
 
-2.1.2  Linux Exception.  Notwithstanding the foregoing terms of
-Section 2.1.1, SOFTWARE designed exclusively for use on the Linux
-operating system may be copied and redistributed, provided that
-the binary files thereof are not modified in any way (except for
-unzipping of compressed files).
+2.1.2  Linux/FreeBSD Exception.  Notwithstanding the foregoing terms
+of Section 2.1.1, SOFTWARE designed exclusively for use on the Linux or
+FreeBSD operating systems, or other operating systems derived from the
+source code to these operating systems, may be copied and redistributed,
+provided that the binary files thereof are not modified in any way
+(except for unzipping of compressed files).
 
 2.1.3  Limitations.
 
@@ -136,6 +138,11 @@ This LICENSE will automatically terminate if Customer fails to
 comply with any of the terms and conditions hereof.  In such event,
 Customer must destroy all copies of the SOFTWARE and all of its
 component parts.
+
+Defensive Suspension.  If Customer commences or participates in any legal
+proceeding against NVIDIA, then NVIDIA may, in its sole discretion,
+suspend or terminate all license grants and any other rights provided
+under this LICENSE during the pendency of such legal proceedings.
 
 4.  COPYRIGHT
 
@@ -172,7 +179,7 @@ OF BUSINESS INFORMATION, OR ANY OTHER PECUNIARY LOSS) ARISING OUT
 OF THE USE OF OR INABILITY TO USE THE SOFTWARE, EVEN IF NVIDIA HAS
 BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
 
-7.  MISCELLANEOUS 
+7.  MISCELLANEOUS
 
 The United Nations Convention on Contracts for the International
 Sale of Goods is specifically disclaimed.  If any provision of this
